hphp/test/quick/trait_method_modif3.php.expectf

Fatal error: Access level to Bar::f() must be protected (as in class Foo) or weaker in %s on line 12
